<?xml version="1.0" encoding="utf-8"?>
<resources>.
	<string name="app_name">医学电子书包</string>
	<string name="version">1.7 (git build)</string>
	<string name="accept">接受</string>
	<string name="cancel">取消</string>
	<string name="cannot_open_buffer">无法打开缓冲器</string>
	<string name="cannot_open_document">无法打开文档</string>
	<string name="cannot_open_document_Reason">无法打开文档： %1$s</string>
	<string name="cannot_open_file_Path">无法打开文件：%1$s</string>
	<string name="choose_value">选择值</string>
	<string name="copied_to_clipboard">已复制到剪贴板</string>
	<string name="copy">复制</string>
	<string name="copy_text">复制文本</string>
	<string name="copy_text_to_the_clipboard">将文本复制到剪贴板</string>
	<string name="delete">删除</string>
	<string name="dismiss">关闭</string>
	<string name="document_has_changes_save_them_">文档已变更，保存变更吗？</string>
	<string name="draw_annotation">作批注</string>
	<string name="edit_annotations">编辑批注</string>
	<string name="enter_password">输入密码</string>
	<string name="entering_reflow_mode">输入重排模式</string>
	<string name="fill_out_text_field">填充文本字段</string>
	<string name="format_currently_not_supported">当前不支持此格式</string>
	<string name="highlight">高亮</string>
	<string name="ink">墨迹</string>
	<string name="leaving_reflow_mode">正在离开重排模式</string>
	<string name="more">更多</string>
	<string name="no">否</string>
	<string name="no_further_occurrences_found">没有搜索结果</string>
	<string name="no_media_hint">存储介质在设备和 PC 上共同使用，会导致该存储介质在设备上无法被访问</string>
	<string name="no_media_warning">没有存储介质</string>
	<string name="no_text_selected">未选择文本</string>
	<string name="not_supported">不被支持</string>
	<string name="nothing_to_save">没有要保存的内容</string>
	<string name="okay">确定</string>
	<string name="outline_title">目录</string>
	<string name="parent_directory">[向上一级]</string>
	<string name="picker_title_App_Ver_Dir">%1$s%2$s:%3$s</string>
	<string name="print">打印</string>
	<string name="print_failed">未能打印</string>
	<string name="save">保存</string>
	<string name="search">搜索</string>
	<string name="search_backwards">向后搜索</string>
	<string name="search_document">搜索文档</string>
	<string name="search_forwards">向前搜索</string>
	<string name="searching_">正在搜索…</string>
	<string name="select">选择</string>
	<string name="select_text">选择文本</string>
	<string name="strike_out">删除线</string>
	<string name="text_not_found">未发现文本</string>
	<string name="toggle_links">高亮并启用墨迹</string>
	<string name="underline">下划线</string>
	<string name="yes">是</string>
</resources>
