<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ViewAnimator
        android:id="@+id/switcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" >

        <RelativeLayout
            android:id="@+id/topBar0Main"
            android:layout_width="match_parent"
            android:layout_height="@dimen/xml_pdf_buttons_top_width"
            android:background="@drawable/pdf_nav1"
            android:visibility="gone" >

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="@dimen/xml_pdf_buttons_top_button_width"
                android:layout_height="@dimen/xml_pdf_buttons_top_width"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:src="@drawable/fan" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/xml_pdf_buttons_top_width"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/backButton"
                android:background="@drawable/pdf_nav1_line" />

            <TextView
                android:id="@+id/docNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_toLeftOf="@+id/searchButton"
                android:layout_toRightOf="@id/backButton"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <!--
                 <ImageButton
                android:id="@+id/linkButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/reflowButton"
                android:background="@drawable/button"
                android:contentDescription="@string/toggle_links"
                android:src="@drawable/ic_link" />
            -->


            <!--
                 <ImageButton
                android:id="@+id/reflowButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/outlineButton"
                android:background="@drawable/button"
                android:contentDescription="@string/toggle_reflow_mode"
                android:src="@drawable/ic_reflow" />
            -->


            <!--
                 <ImageButton
                android:id="@+id/outlineButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/searchButton"
                android:background="@drawable/button"
                android:contentDescription="@string/outline_title"
                android:src="@drawable/ic_list" />
            -->


            <!--
                 <ImageButton
                android:id="@+id/copyTextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignWithParentIfMissing="true"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/searchButton"
                android:background="@drawable/button"
                android:contentDescription="@string/copy_text_to_the_clipboard"
                android:onClick="OnCopyTextButtonClick"
                android:src="@drawable/ic_clipboard" />
            -->

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/xml_pdf_buttons_top_width"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/searchButton"
                android:background="@drawable/pdf_nav1_line" />

            <ImageButton
                android:id="@+id/searchButton"
                android:layout_width="@dimen/xml_pdf_buttons_top_button_width"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:background="@null"
                android:contentDescription="@string/search_document"
                android:src="@drawable/pdf_sou" />

            <!--
                 <ImageButton
                android:id="@+id/moreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button"
                android:contentDescription="@string/more"
                android:onClick="OnMoreButtonClick"
                android:src="@drawable/ic_more" />
            -->
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/topBar1Search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/pdf_nav1" >

            <ImageButton
                android:id="@+id/cancelSearch"
                android:layout_width="@dimen/xml_pdf_buttons_top_button_width"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:contentDescription="@string/cancel"
                android:onClick="OnCancelSearchButtonClick"
                android:src="@drawable/pdf_search_close" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/xml_pdf_buttons_top_width"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/cancelSearch"
                android:background="@drawable/pdf_nav1_line" />

            <EditText
                android:id="@+id/searchText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="8dp"
                android:layout_toLeftOf="@+id/searchBack"
                android:layout_toRightOf="@+id/cancelSearch"
                android:background="@drawable/search_box"
                android:hint="@string/search"
                android:inputType="text"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:singleLine="true" />

            <ImageButton
                android:id="@+id/searchBack"
                android:layout_width="@dimen/xml_pdf_buttons_top_backforward_width"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/xml_pdf_buttons_top_backforward_margin"
                android:layout_toLeftOf="@+id/searchForward"
                android:adjustViewBounds="true"
                android:background="@null"
                android:contentDescription="@string/search_backwards"
                android:scaleType="centerInside"
                android:src="@drawable/pdf_search_back" />

            <ImageButton
                android:id="@+id/searchForward"
                android:layout_width="@dimen/xml_pdf_buttons_top_backforward_width"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:adjustViewBounds="true"
                android:background="@null"
                android:contentDescription="@string/search_forwards"
                android:scaleType="centerInside"
                android:src="@drawable/pdf_search_forward" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/topBar2Annot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolbar" >

            <ImageButton
                android:id="@+id/cancelAnnotButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button"
                android:contentDescription="@string/cancel"
                android:onClick="OnCancelAnnotButtonClick"
                android:src="@drawable/ic_cancel" />

            <ImageButton
                android:id="@+id/highlightButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/underlineButton"
                android:background="@drawable/button"
                android:contentDescription="@string/highlight"
                android:onClick="OnHighlightButtonClick"
                android:src="@drawable/ic_highlight" />

            <ImageButton
                android:id="@+id/underlineButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/strikeOutButton"
                android:background="@drawable/button"
                android:contentDescription="@string/underline"
                android:onClick="OnUnderlineButtonClick"
                android:src="@drawable/ic_underline" />

            <ImageButton
                android:id="@+id/strikeOutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/inkButton"
                android:background="@drawable/button"
                android:contentDescription="@string/strike_out"
                android:onClick="OnStrikeOutButtonClick"
                android:src="@drawable/ic_strike" />

            <ImageButton
                android:id="@+id/inkButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button"
                android:contentDescription="@string/ink"
                android:onClick="OnInkButtonClick"
                android:src="@drawable/ic_pen" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/topBar3Delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolbar" >

            <ImageButton
                android:id="@+id/cancelDeleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button"
                android:contentDescription="@string/cancel"
                android:onClick="OnCancelDeleteButtonClick"
                android:src="@drawable/ic_cancel" />

            <TextView
                android:id="@+id/deleteLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/deleteButton"
                android:layout_toRightOf="@+id/cancelDeleteButton"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/delete"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button"
                android:contentDescription="@string/delete"
                android:onClick="OnDeleteButtonClick"
                android:src="@drawable/ic_trash" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/topBar4More"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolbar" >

            <ImageButton
                android:id="@+id/cancelMoreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button"
                android:contentDescription="@string/cancel"
                android:onClick="OnCancelMoreButtonClick"
                android:src="@drawable/ic_cancel" />

            <!--
                 <ImageButton
				android:id="@+id/printButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:layout_toLeftOf="@+id/copyTextButton"
				android:contentDescription="@string/print"
				android:background="@drawable/button"
				android:onClick="OnPrintButtonClick"
				android:src="@drawable/ic_print" />
            -->


            <!--
                 <ImageButton
                android:id="@+id/copyTextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignWithParentIfMissing="true"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/editAnnotButton"
                android:background="@drawable/button"
                android:contentDescription="@string/copy_text_to_the_clipboard"
                android:onClick="OnCopyTextButtonClick"
                android:src="@drawable/ic_clipboard" />
            -->

            <ImageButton
                android:id="@+id/editAnnotButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button"
                android:contentDescription="@string/edit_annotations"
                android:onClick="OnEditAnnotButtonClick"
                android:src="@drawable/ic_annotation" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/topBar5Accept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolbar" >

            <ImageButton
                android:id="@+id/cancelAcceptButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button"
                android:contentDescription="@string/cancel"
                android:onClick="OnCancelAcceptButtonClick"
                android:src="@drawable/ic_cancel" />

            <TextView
                android:id="@+id/annotType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/acceptButton"
                android:layout_toRightOf="@+id/cancelAcceptButton"
                android:gravity="center"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/acceptButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button"
                android:contentDescription="@string/accept"
                android:onClick="OnAcceptButtonClick"
                android:src="@drawable/ic_check" />
        </RelativeLayout>
    </ViewAnimator>

    <RelativeLayout
        android:id="@+id/lowerButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" >

        <RelativeLayout
            android:id="@+id/rlSlider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/xml_pdf_buttons_bottom_width"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/pdf_nav_bot1" >

            <SeekBar
                android:id="@+id/pageSlider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:maxHeight="@dimen/xml_pdf_buttons_seekbar_width"
                android:minHeight="@dimen/xml_pdf_buttons_seekbar_width"
                android:paddingBottom="5dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="5dp"
                android:progressDrawable="@drawable/seekbar_style"
                android:thumb="@drawable/jin_yuan" />
        </RelativeLayout>

        <TextView
            android:id="@+id/pageNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/rlSlider"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:background="@drawable/page_num"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF" />
    </RelativeLayout>

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/page_num"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF" />

</RelativeLayout>